--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -466,5 +466,9 @@
   "settings_notification": "Известия на работния плот",
   "show_in_explorer": "Отворете в Blockchain Explorer",
   "toggle_desktop_notification": "Активирайте или деактивирайте известията на работния плот",
-  "updated": "Актуализиран"
+  "updated": "Актуализиран",
+  "burn": "Горя",
+  "burn_address": "Изгорено 🔥",
+  "burn_recipient": "Открито изгаряне",
+  "burn_recipient_text": "Изгарянето на Signa или Tokens означава необратима загуба на изгорената стойност!"
 }
