--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -374,7 +374,7 @@
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
   "burn": "Burn",
-  "burn_recipient": "Burn Address Detected",
+  "burn_recipient": "Burning Detected",
   "burn_recipient_text": "Burning Signa or Tokens means a non-reversible loss of the burnt value!",
   "unknown_version": "Version unknown",
   "update": "Update",
@@ -442,7 +442,7 @@
   "supply": "Total Supply",
   "invalid_address": "Invalid Address",
   "unknown_address": "Unknown Address",
-  "burn_address": "Burn Address \uD83D\uDD25",
+  "burn_address": "Burnt 🔥",
   "success_transaction_executed": "Transaction successfully executed",
   "no_tokens_available": "No tokens available",
   "trade_tokens_with": "Trade tokens with",
