--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -466,5 +466,9 @@
   "settings_notification": "Уведомления на рабочем столе",
   "show_in_explorer": "Открыть в Blockchain Explorer",
   "toggle_desktop_notification": "Включить или отключить уведомления на рабочем столе",
-  "updated": "Обновлено"
+  "updated": "Обновлено",
+  "burn": "Гореть",
+  "burn_address": "Сгорел 🔥",
+  "burn_recipient": "Обнаружено горение",
+  "burn_recipient_text": "Сжигание Signa или Токенов означает необратимую потерю сожженной стоимости!"
 }
