--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -466,5 +466,9 @@
   "settings_notification": "Обавештења на радној површини",
   "show_in_explorer": "Отворите у Блоцкцхаин Екплорер-у",
   "toggle_desktop_notification": "Омогућите или онемогућите обавештења на радној површини",
-  "updated": "Ажуриран"
+  "updated": "Ажуриран",
+  "burn": "Горети",
+  "burn_address": "Спаљено 🔥",
+  "burn_recipient": "Бурнинг Детецтед",
+  "burn_recipient_text": "Спаљивање сигнала или токена значи неповратан губитак спаљене вредности!"
 }
