--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -466,5 +466,9 @@
   "settings_notification": "Сповіщення на робочому столі",
   "show_in_explorer": "Відкрийте в Blockchain Explorer",
   "toggle_desktop_notification": "Увімкнути або вимкнути сповіщення на робочому столі",
-  "updated": "Оновлено"
+  "updated": "Оновлено",
+  "burn": "спалити",
+  "burn_address": "Згоріла 🔥",
+  "burn_recipient": "Виявлено горіння",
+  "burn_recipient_text": "Спалювання Signa або Tokens означає незворотну втрату спаленої вартості!"
 }
