--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -373,6 +373,9 @@
   "unknown": "Unknown",
   "unknown_recipients": "Unknown Recipients Detected",
   "unknown_recipients_text": "The following recipient(s) could not be validated:",
+  "burn": "Burn",
+  "burn_recipient": "Burning Detected",
+  "burn_recipient_text": "Burning Signa or Tokens means a non-reversible loss of the burnt value!",
   "unknown_version": "Version unknown",
   "update": "Update",
   "update_available": "New update available",
@@ -439,6 +442,7 @@
   "supply": "Total Supply",
   "invalid_address": "Invalid Address",
   "unknown_address": "Unknown Address",
+  "burn_address": "Burnt 🔥",
   "success_transaction_executed": "Transaction successfully executed",
   "no_tokens_available": "No tokens available",
   "trade_tokens_with": "Trade tokens with",
