--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -470,5 +470,7 @@
   "last_forged_block": "Last Forged Block",
   "reward_income_info": "This is the sum of the block rewards you forged with this account as if you were a solo miner and does not necessarily reflects your effective mining income. ",
   "no_block_forged": "No block forged yet",
-  "set_reward_recipient_on": "Joined on"
+  "set_reward_recipient_on": "Joined on",
+  "standard_descriptor": "Standard Compliant",
+  "custom_descriptor": "Custom"
 }
