--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -471,11 +471,14 @@
   "reward_income_info": "This is the sum of the block rewards you forged with this account as if you were a solo miner and does not necessarily reflects your effective mining income. ",
   "no_block_forged": "No block forged yet",
   "set_reward_recipient_on": "Joined on",
-  "src44": "SRC-44",
+  "src44": "SRC44",
+  "src44_compliant": "SRC44 compliant/compatible",
   "json": "JSON",
   "custom": "Custom",
   "enter_ipfs_hash": "Enter IPFS Hash",
   "homepage": "Home Page",
   "enter_url": "Enter URL",
-  "avatar": "Avatar"
+  "avatar": "Avatar",
+  "accept": "Accept",
+  "accept_json_content": "Click to accept the content for submitting"
 }
